file.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParGram.y
-----------------------------------------------------------------------------

state 131 contains 16 reduce/reduce conflicts.

rule 76 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pFunction -> Function                       (1)
	%start_pDecl -> Decl                               (2)
	%start_pPDecl -> PDecl                             (3)
	%start_pListFunction -> ListFunction               (4)
	%start_pListStm -> ListStm                         (5)
	%start_pListDecl -> ListDecl                       (6)
	%start_pListPDecl -> ListPDecl                     (7)
	%start_pListExp -> ListExp                         (8)
	%start_pStm -> Stm                                 (9)
	%start_pAss -> Ass                                 (10)
	%start_pExp2 -> Exp2                               (11)
	%start_pExp3 -> Exp3                               (12)
	%start_pExp4 -> Exp4                               (13)
	%start_pExp5 -> Exp5                               (14)
	%start_pExp6 -> Exp6                               (15)
	%start_pExp8 -> Exp8                               (16)
	%start_pExp9 -> Exp9                               (17)
	%start_pExp10 -> Exp10                             (18)
	%start_pExp -> Exp                                 (19)
	%start_pExp1 -> Exp1                               (20)
	%start_pExp7 -> Exp7                               (21)
	%start_pType -> Type                               (22)
	%start_pPMet -> PMet                               (23)
	Ident -> L_ident                                   (24)
	String -> L_quoted                                 (25)
	Integer -> L_integ                                 (26)
	Double -> L_doubl                                  (27)
	Program -> ListStm                                 (28)
	Function -> '$' Ident '(' ListPDecl ')' ':' Type 'do' ListStm 'end'   (29)
	Decl -> Ident ':' Type                             (30)
	PDecl -> PMet ':' Type                             (31)
	ListFunction ->                                    (32)
	ListFunction -> ListFunction Function              (33)
	ListStm ->                                         (34)
	ListStm -> ListStm Stm                             (35)
	ListDecl ->                                        (36)
	ListDecl -> Decl                                   (37)
	ListDecl -> Decl ';' ListDecl                      (38)
	ListPDecl ->                                       (39)
	ListPDecl -> PDecl                                 (40)
	ListPDecl -> PDecl ';' ListPDecl                   (41)
	ListExp ->                                         (42)
	ListExp -> Exp                                     (43)
	ListExp -> Exp ',' ListExp                         (44)
	Stm -> Decl ';'                                    (45)
	Stm -> Exp ';'                                     (46)
	Stm -> 'do' ListStm 'end'                          (47)
	Stm -> 'from' Ass 'until' Exp 'loop' ListStm 'end'   (48)
	Stm -> 'return' Exp ';'                            (49)
	Stm -> Function                                    (50)
	Stm -> Ass                                         (51)
	Ass -> Exp8 ':=' Exp ';'                           (52)
	Exp2 -> Exp2 'or' Exp3                             (53)
	Exp2 -> Exp3                                       (54)
	Exp3 -> Exp3 'and' Exp4                            (55)
	Exp3 -> Exp4                                       (56)
	Exp4 -> Exp4 '<' Exp5                              (57)
	Exp4 -> Exp4 '>' Exp5                              (58)
	Exp4 -> Exp5                                       (59)
	Exp5 -> Exp5 '+' Exp6                              (60)
	Exp5 -> Exp5 '-' Exp6                              (61)
	Exp5 -> Exp6                                       (62)
	Exp6 -> Exp6 '*' Exp7                              (63)
	Exp6 -> Exp6 '/' Exp7                              (64)
	Exp6 -> Exp7                                       (65)
	Exp8 -> '*' Exp7                                   (66)
	Exp8 -> '!' Exp7                                   (67)
	Exp8 -> Exp9                                       (68)
	Exp9 -> Exp9 '[' Exp ']'                           (69)
	Exp9 -> Exp10                                      (70)
	Exp10 -> Ident '(' ListExp ')'                     (71)
	Exp10 -> Ident                                     (72)
	Exp10 -> String                                    (73)
	Exp10 -> Integer                                   (74)
	Exp10 -> Double                                    (75)
	Exp10 -> '(' Exp ')'                               (76)
	Exp10 -> '(' Exp ')'                               (77)
	Exp -> Exp1                                        (78)
	Exp1 -> Exp2                                       (79)
	Exp7 -> Exp8                                       (80)
	Type -> 'int'                                      (81)
	Type -> 'double'                                   (82)
	Type -> 'bool'                                     (83)
	Type -> 'array' '[' Type ']'                       (84)
	Type -> '*' Type                                   (85)
	PMet -> 'value' Ident                              (86)
	PMet -> 'valres' Ident                             (87)
	PMet -> 'name' Ident                               (88)
	PMet -> 'ref' Ident                                (89)
	PMet -> Ident                                      (90)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'$'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	','            { PT _ (TS _ 7) }
	'-'            { PT _ (TS _ 8) }
	'/'            { PT _ (TS _ 9) }
	':'            { PT _ (TS _ 10) }
	':='           { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'>'            { PT _ (TS _ 14) }
	'['            { PT _ (TS _ 15) }
	']'            { PT _ (TS _ 16) }
	'and'          { PT _ (TS _ 17) }
	'array'        { PT _ (TS _ 18) }
	'bool'         { PT _ (TS _ 19) }
	'do'           { PT _ (TS _ 20) }
	'double'       { PT _ (TS _ 21) }
	'end'          { PT _ (TS _ 22) }
	'from'         { PT _ (TS _ 23) }
	'int'          { PT _ (TS _ 24) }
	'loop'         { PT _ (TS _ 25) }
	'name'         { PT _ (TS _ 26) }
	'or'           { PT _ (TS _ 27) }
	'ref'          { PT _ (TS _ 28) }
	'return'       { PT _ (TS _ 29) }
	'until'        { PT _ (TS _ 30) }
	'valres'       { PT _ (TS _ 31) }
	'value'        { PT _ (TS _ 32) }
	L_ident        { PT _ (TV $$) }
	L_quoted       { PT _ (TL $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pFunction rule  1
	%start_pDecl    rule  2
	%start_pPDecl   rule  3
	%start_pListFunction rule  4
	%start_pListStm rule  5
	%start_pListDecl rule  6
	%start_pListPDecl rule  7
	%start_pListExp rule  8
	%start_pStm     rule  9
	%start_pAss     rule  10
	%start_pExp2    rule  11
	%start_pExp3    rule  12
	%start_pExp4    rule  13
	%start_pExp5    rule  14
	%start_pExp6    rule  15
	%start_pExp8    rule  16
	%start_pExp9    rule  17
	%start_pExp10   rule  18
	%start_pExp     rule  19
	%start_pExp1    rule  20
	%start_pExp7    rule  21
	%start_pType    rule  22
	%start_pPMet    rule  23
	Ident           rule  24
	String          rule  25
	Integer         rule  26
	Double          rule  27
	Program         rule  28
	Function        rule  29
	Decl            rule  30
	PDecl           rule  31
	ListFunction    rules 32, 33
	ListStm         rules 34, 35
	ListDecl        rules 36, 37, 38
	ListPDecl       rules 39, 40, 41
	ListExp         rules 42, 43, 44
	Stm             rules 45, 46, 47, 48, 49, 50, 51
	Ass             rule  52
	Exp2            rules 53, 54
	Exp3            rules 55, 56
	Exp4            rules 57, 58, 59
	Exp5            rules 60, 61, 62
	Exp6            rules 63, 64, 65
	Exp8            rules 66, 67, 68
	Exp9            rules 69, 70
	Exp10           rules 71, 72, 73, 74, 75, 76, 77
	Exp             rule  78
	Exp1            rule  79
	Exp7            rule  80
	Type            rules 81, 82, 83, 84, 85
	PMet            rules 86, 87, 88, 89, 90

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'!'            reduce using rule 34
	'$'            reduce using rule 34
	'('            reduce using rule 34
	'*'            reduce using rule 34
	'do'           reduce using rule 34
	'from'         reduce using rule 34
	'return'       reduce using rule 34
	L_ident        reduce using rule 34
	L_quoted       reduce using rule 34
	L_integ        reduce using rule 34
	L_doubl        reduce using rule 34
	%eof           reduce using rule 34

	Program        goto state 95
	ListStm        goto state 96

State 1


	'$'            shift, and enter state 78

	Function       goto state 94

State 2


	L_ident        shift, and enter state 25

	Ident          goto state 87
	Decl           goto state 93

State 3


	'name'         shift, and enter state 28
	'ref'          shift, and enter state 29
	'valres'       shift, and enter state 30
	'value'        shift, and enter state 31
	L_ident        shift, and enter state 25

	Ident          goto state 26
	PDecl          goto state 92
	PMet           goto state 86

State 4


	'$'            reduce using rule 32
	%eof           reduce using rule 32

	ListFunction   goto state 91

State 5


	'!'            reduce using rule 34
	'$'            reduce using rule 34
	'('            reduce using rule 34
	'*'            reduce using rule 34
	'do'           reduce using rule 34
	'from'         reduce using rule 34
	'return'       reduce using rule 34
	L_ident        reduce using rule 34
	L_quoted       reduce using rule 34
	L_integ        reduce using rule 34
	L_doubl        reduce using rule 34
	%eof           reduce using rule 34

	ListStm        goto state 90

State 6


	L_ident        shift, and enter state 25
	%eof           reduce using rule 36

	Ident          goto state 87
	Decl           goto state 88
	ListDecl       goto state 89

State 7


	'name'         shift, and enter state 28
	'ref'          shift, and enter state 29
	'valres'       shift, and enter state 30
	'value'        shift, and enter state 31
	L_ident        shift, and enter state 25
	%eof           reduce using rule 39

	Ident          goto state 26
	PDecl          goto state 84
	ListPDecl      goto state 85
	PMet           goto state 86

State 8


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51
	%eof           reduce using rule 42

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	ListExp        goto state 82
	Exp2           goto state 52
	Exp3           goto state 53
	Exp4           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp8           goto state 42
	Exp9           goto state 43
	Exp10          goto state 44
	Exp            goto state 83
	Exp1           goto state 60
	Exp7           goto state 58

State 9


	'!'            shift, and enter state 46
	'$'            shift, and enter state 78
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	'do'           shift, and enter state 79
	'from'         shift, and enter state 80
	'return'       shift, and enter state 81
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 71
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Function       goto state 72
	Decl           goto state 73
	Stm            goto state 74
	Ass            goto state 75
	Exp2           goto state 52
	Exp3           goto state 53
	Exp4           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp8           goto state 76
	Exp9           goto state 43
	Exp10          goto state 44
	Exp            goto state 77
	Exp1           goto state 60
	Exp7           goto state 58

State 10


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Ass            goto state 69
	Exp8           goto state 70
	Exp9           goto state 43
	Exp10          goto state 44

State 11


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp2           goto state 68
	Exp3           goto state 53
	Exp4           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp8           goto state 42
	Exp9           goto state 43
	Exp10          goto state 44
	Exp7           goto state 58

State 12


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp3           goto state 67
	Exp4           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp8           goto state 42
	Exp9           goto state 43
	Exp10          goto state 44
	Exp7           goto state 58

State 13


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp4           goto state 66
	Exp5           goto state 55
	Exp6           goto state 56
	Exp8           goto state 42
	Exp9           goto state 43
	Exp10          goto state 44
	Exp7           goto state 58

State 14


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp5           goto state 65
	Exp6           goto state 56
	Exp8           goto state 42
	Exp9           goto state 43
	Exp10          goto state 44
	Exp7           goto state 58

State 15


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp6           goto state 64
	Exp8           goto state 42
	Exp9           goto state 43
	Exp10          goto state 44
	Exp7           goto state 58

State 16


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp8           goto state 63
	Exp9           goto state 43
	Exp10          goto state 44

State 17


	'('            shift, and enter state 47
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp9           goto state 62
	Exp10          goto state 44

State 18


	'('            shift, and enter state 47
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp10          goto state 61

State 19


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp2           goto state 52
	Exp3           goto state 53
	Exp4           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp8           goto state 42
	Exp9           goto state 43
	Exp10          goto state 44
	Exp            goto state 59
	Exp1           goto state 60
	Exp7           goto state 58

State 20


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp2           goto state 52
	Exp3           goto state 53
	Exp4           goto state 54
	Exp5           goto state 55
	Exp6           goto state 56
	Exp8           goto state 42
	Exp9           goto state 43
	Exp10          goto state 44
	Exp1           goto state 57
	Exp7           goto state 58

State 21


	'!'            shift, and enter state 46
	'('            shift, and enter state 47
	'*'            shift, and enter state 48
	L_ident        shift, and enter state 25
	L_quoted       shift, and enter state 49
	L_integ        shift, and enter state 50
	L_doubl        shift, and enter state 51

	Ident          goto state 38
	String         goto state 39
	Integer        goto state 40
	Double         goto state 41
	Exp8           goto state 42
	Exp9           goto state 43
	Exp10          goto state 44
	Exp7           goto state 45

State 22


	'*'            shift, and enter state 33
	'array'        shift, and enter state 34
	'bool'         shift, and enter state 35
	'double'       shift, and enter state 36
	'int'          shift, and enter state 37

	Type           goto state 32

State 23


	'name'         shift, and enter state 28
	'ref'          shift, and enter state 29
	'valres'       shift, and enter state 30
	'value'        shift, and enter state 31
	L_ident        shift, and enter state 25

	Ident          goto state 26
	PMet           goto state 27

State 24


	L_ident        shift, and enter state 25


State 25

	Ident -> L_ident .                                  (rule 24)

	'('            reduce using rule 24
	')'            reduce using rule 24
	'*'            reduce using rule 24
	'+'            reduce using rule 24
	','            reduce using rule 24
	'-'            reduce using rule 24
	'/'            reduce using rule 24
	':'            reduce using rule 24
	':='           reduce using rule 24
	';'            reduce using rule 24
	'<'            reduce using rule 24
	'>'            reduce using rule 24
	'['            reduce using rule 24
	']'            reduce using rule 24
	'and'          reduce using rule 24
	'loop'         reduce using rule 24
	'or'           reduce using rule 24
	%eof           reduce using rule 24


State 26

	PMet -> Ident .                                     (rule 90)

	':'            reduce using rule 90
	%eof           reduce using rule 90


State 27

	%start_pPMet -> PMet .                              (rule 23)

	%eof           accept


State 28

	PMet -> 'name' . Ident                              (rule 88)

	L_ident        shift, and enter state 25

	Ident          goto state 129

State 29

	PMet -> 'ref' . Ident                               (rule 89)

	L_ident        shift, and enter state 25

	Ident          goto state 128

State 30

	PMet -> 'valres' . Ident                            (rule 87)

	L_ident        shift, and enter state 25

	Ident          goto state 127

State 31

	PMet -> 'value' . Ident                             (rule 86)

	L_ident        shift, and enter state 25

	Ident          goto state 126

State 32

	%start_pType -> Type .                              (rule 22)

	%eof           accept


State 33

	Type -> '*' . Type                                  (rule 85)

	'*'            shift, and enter state 33
	'array'        shift, and enter state 34
	'bool'         shift, and enter state 35
	'double'       shift, and enter state 36
	'int'          shift, and enter state 37

	Type           goto state 125

State 34

	Type -> 'array' . '[' Type ']'                      (rule 84)

	'['            shift, and enter state 124


State 35

	Type -> 'bool' .                                    (rule 83)

	')'            reduce using rule 83
	';'            reduce using rule 83
	']'            reduce using rule 83
	'do'           reduce using rule 83
	%eof           reduce using rule 83


State 36

	Type -> 'double' .                                  (rule 82)

	')'            reduce using rule 82
	';'            reduce using rule 82
	']'            reduce using rule 82
	'do'           reduce using rule 82
	%eof           reduce using rule 82


State 37

	Type -> 'int' .                                     (rule 81)

	')'            reduce using rule 81
	';'            reduce using rule 81
	']'            reduce using rule 81
	'do'           reduce using rule 81
	%eof           reduce using rule 81


State 38

	Exp10 -> Ident . '(' ListExp ')'                    (rule 71)
	Exp10 -> Ident .                                    (rule 72)

	'('            shift, and enter state 111
	')'            reduce using rule 72
	'*'            reduce using rule 72
	'+'            reduce using rule 72
	','            reduce using rule 72
	'-'            reduce using rule 72
	'/'            reduce using rule 72
	':='           reduce using rule 72
	';'            reduce using rule 72
	'<'            reduce using rule 72
	'>'            reduce using rule 72
	'['            reduce using rule 72
	']'            reduce using rule 72
	'and'          reduce using rule 72
	'loop'         reduce using rule 72
	'or'           reduce using rule 72
	%eof           reduce using rule 72


State 39

	Exp10 -> String .                                   (rule 73)

	')'            reduce using rule 73
	'*'            reduce using rule 73
	'+'            reduce using rule 73
	','            reduce using rule 73
	'-'            reduce using rule 73
	'/'            reduce using rule 73
	':='           reduce using rule 73
	';'            reduce using rule 73
	'<'            reduce using rule 73
	'>'            reduce using rule 73
	'['            reduce using rule 73
	']'            reduce using rule 73
	'and'          reduce using rule 73
	'loop'         reduce using rule 73
	'or'           reduce using rule 73
	%eof           reduce using rule 73


State 40

	Exp10 -> Integer .                                  (rule 74)

	')'            reduce using rule 74
	'*'            reduce using rule 74
	'+'            reduce using rule 74
	','            reduce using rule 74
	'-'            reduce using rule 74
	'/'            reduce using rule 74
	':='           reduce using rule 74
	';'            reduce using rule 74
	'<'            reduce using rule 74
	'>'            reduce using rule 74
	'['            reduce using rule 74
	']'            reduce using rule 74
	'and'          reduce using rule 74
	'loop'         reduce using rule 74
	'or'           reduce using rule 74
	%eof           reduce using rule 74


State 41

	Exp10 -> Double .                                   (rule 75)

	')'            reduce using rule 75
	'*'            reduce using rule 75
	'+'            reduce using rule 75
	','            reduce using rule 75
	'-'            reduce using rule 75
	'/'            reduce using rule 75
	':='           reduce using rule 75
	';'            reduce using rule 75
	'<'            reduce using rule 75
	'>'            reduce using rule 75
	'['            reduce using rule 75
	']'            reduce using rule 75
	'and'          reduce using rule 75
	'loop'         reduce using rule 75
	'or'           reduce using rule 75
	%eof           reduce using rule 75


State 42

	Exp7 -> Exp8 .                                      (rule 80)

	')'            reduce using rule 80
	'*'            reduce using rule 80
	'+'            reduce using rule 80
	','            reduce using rule 80
	'-'            reduce using rule 80
	'/'            reduce using rule 80
	':='           reduce using rule 80
	';'            reduce using rule 80
	'<'            reduce using rule 80
	'>'            reduce using rule 80
	']'            reduce using rule 80
	'and'          reduce using rule 80
	'loop'         reduce using rule 80
	'or'           reduce using rule 80
	%eof           reduce using rule 80


State 43

	Exp8 -> Exp9 .                                      (rule 68)
	Exp9 -> Exp9 . '[' Exp ']'                          (rule 69)

	')'            reduce using rule 68
	'*'            reduce using rule 68
	'+'            reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'/'            reduce using rule 68
	':='           reduce using rule 68
	';'            reduce using rule 68
	'<'            reduce using rule 68
	'>'            reduce using rule 68
	'['            shift, and enter state 120
	']'            reduce using rule 68
	'and'          reduce using rule 68
	'loop'         reduce using rule 68
	'or'           reduce using rule 68
	%eof           reduce using rule 68


State 44

	Exp9 -> Exp10 .                                     (rule 70)
